--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,32 @@
 .App {
-  /* width: 100% !important; */
-  padding: 0;
-  margin: 0;
-  text-align: center;
+	/* width: 100% !important; */
+	padding: 0;
+	margin: 0;
+	text-align: center;
 }
 
-.contenido{
-  display: flex !important;
-  flex-wrap: wrap-reverse !important;
-  flex-direction: row-reverse !important;
-  align-items: flex-start !important;
-  justify-content: space-around !important;
-  width: auto !important
+.contenido {
+	display: flex !important;
+	flex-wrap: wrap-reverse !important;
+	flex-direction: row-reverse !important;
+	align-items: flex-start !important;
+	justify-content: space-around !important;
+	width: auto !important;
 }
 
-.juntar{
-  justify-content: space-around !important;
+.juntar {
+	justify-content: space-around !important;
 }
 
-#inicio{
-  height: 15% !important;
-  margin-top: 5% !important;
-  margin-bottom: 5% !important;
-  margin-left: 40.5%;
-  align-items: center !important;
-  width: 20% !important;
+#inicio {
+	height: 15% !important;
+	margin-top: 5% !important;
+	margin-bottom: 5% !important;
+	/* margin-left: 40.5%; */
+	align-items: center !important;
+	/* width: 20% !important; */
 }
 
-#busca{
-  box-shadow: 0px 0px 5px 1px #007385;
+#busca {
+	box-shadow: 0px 0px 5px 1px #007385;
 }
