--- a/src/pages/Tarjetas/Tarjetas.css
+++ b/src/pages/Tarjetas/Tarjetas.css
@@ -56,7 +56,7 @@
 	flex-direction: column;
 	row-gap: 10px;
 }
-
+/*
 .contenido {
 	display: flex !important;
 	flex-wrap: wrap-reverse !important;
@@ -65,7 +65,13 @@
 	justify-content: space-around !important;
 	width: auto !important;
 }
-
+*/
+/*
 .juntar {
 	justify-content: space-around !important;
+}
+*/
+
+.tarjetas {
+	/* max-width: 600px; */
 }
