--- a/src/pages/Formulario/Formulario.css
+++ b/src/pages/Formulario/Formulario.css
@@ -6,9 +6,9 @@
 	/* margin-left:34%; */
 	/* margin: 0 auto !important; */
 	margin-top: 0;
-	margin-bottom: 5%;
+	/* margin-bottom: 0.5rem; */
 	align-items: center !important;
-	row-gap: 10px !important;
+	row-gap: 0.5rem;
 	padding: 20px !important;
 	color: white !important;
 	background: #007385 !important;
@@ -46,4 +46,8 @@ input {
 
 .cuerpo {
 	margin-bottom: 15px !important;
+}
+
+.precios > input {
+	margin-bottom: 0.5rem;
 }
