--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,111 +1,233 @@
-.divLogin {
-    height: 90%;
-    width: 100%;
-    padding-top: 7%;
-    font-family: "Poppins", sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.login-wrap {
+	margin: 0;
+	color: #6a6f8c;
+	background: #c8c8c8;
+	font: 600 16px/18px "Open Sans", sans-serif;
+}
+*,
+:after,
+:before {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+}
+.clearfix:after,
+.clearfix:before {
+	content: "";
+	display: table;
+}
+.clearfix:after {
+	clear: both;
+	display: block;
+}
+a {
+	color: inherit;
+	text-decoration: none;
 }
 
-.formLogin {
-    min-height: 300px;
-    width: 40%;
-    margin: 0 auto;
-    background: white;
-    background: linear-gradient( to right bottom, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.5));
-    box-shadow: 6px 6px 20px rgba(122, 122, 122, 0.212);
-    backdrop-filter: blur(3rem);
-    border-radius: 2rem;
-    position: relative;
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.login-wrap {
+	width: 100%;
+	margin: 0 auto;
+	/* margin-top: 20px; */
+	max-width: 525px;
+	/* min-height: 600px; */
+
+	height: 100vh;
+
+	position: relative;
+	background: url("./images/fondo.png") no-repeat center;
+	background-size: cover;
+	box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+.login-html {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	padding: 50px 70px 0px 70px;
+	background: rgba(40, 57, 101, 0.9);
+}
+.login-html .sign-in-htm,
+.login-html .sign-up-htm {
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	position: absolute;
+	transform: rotateY(180deg);
+	backface-visibility: hidden;
+	transition: all 0.4s linear;
+}
+.login-html .sign-in,
+.login-html .sign-up,
+.login-form .group .check {
+	display: none;
+}
+.login-html .tab,
+.login-form .group .label,
+.login-form .group .button {
+	text-transform: uppercase;
+}
+.login-html .tab {
+	font-size: 22px;
+	margin-right: 15px;
+	padding-bottom: 5px;
+	margin: 0 15px 10px 0;
+	display: inline-block;
+	border-bottom: 2px solid transparent;
+}
+.login-html .sign-in:checked + .tab,
+.login-html .sign-up:checked + .tab {
+	color: #fff;
+	border-color: #dc901b;
+}
+.login-form {
+	min-height: 345px;
+	position: relative;
+	perspective: 1000px;
+	transform-style: preserve-3d;
+}
+.login-form .group {
+	/* padding-bottom: 10px; */
+}
+form .group input {
+	margin-bottom: 10px;
+}
+form .group input[type="submit"] {
+	margin-top: 20px;
+}
+.login-form .group .label,
+.login-form .group .input,
+.login-form .group .button {
+	width: 100%;
+	color: #fff;
+	display: block;
+}
+.login-form .group .input,
+.login-form .group .button {
+	border: none;
+	padding: 15px 20px;
+	border-radius: 25px;
+	background: rgba(255, 255, 255, 0.1);
+}
+.login-form .group input[data-type="password"] {
+	-webkit-text-security: circle;
+}
+.login-form .group .label {
+	color: #aaa;
+	font-size: 12px;
+}
+.login-form .group .button {
+	background: #137586;
+}
+.login-form .group label .icon {
+	width: 15px;
+	height: 15px;
+	border-radius: 2px;
+	position: relative;
+	display: inline-block;
+	background: rgba(255, 255, 255, 0.1);
+}
+.login-form .group label .icon:before,
+.login-form .group label .icon:after {
+	content: "";
+	width: 10px;
+	height: 2px;
+	background: #fff;
+	position: absolute;
+	transition: all 0.2s ease-in-out 0s;
+}
+.login-form .group label .icon:before {
+	left: 3px;
+	width: 5px;
+	bottom: 6px;
+	transform: scale(0) rotate(0);
+}
+.login-form .group label .icon:after {
+	top: 6px;
+	right: 0;
+	transform: scale(0) rotate(0);
+}
+.login-form .group .check:checked + label {
+	color: #fff;
+}
+.login-form .group .check:checked + label .icon {
+	background: #1161ee;
+}
+.login-form .group .check:checked + label .icon:before {
+	transform: scale(1) rotate(45deg);
+}
+.login-form .group .check:checked + label .icon:after {
+	transform: scale(1) rotate(-45deg);
+}
+.login-html .sign-in:checked + .tab + .sign-up + .tab + .login-form .sign-in-htm {
+	transform: rotate(0);
+}
+.login-html .sign-up:checked + .tab + .login-form .sign-up-htm {
+	transform: rotate(0);
+}
+.login-form input {
+	margin: 0 auto;
+}
+.login-form {
+	top: 50px;
+	/* transform: translateY(px); */
+}
+.hr {
+	height: 2px;
+	margin: 60px 0 50px 0;
+	background: rgba(255, 255, 255, 0.2);
 }
 
-.log-title {
-    text-align: center;
-    font-size: 2.5rem;
-    margin-top: 3%;
-    margin-bottom: 6%;
-    color: #426696;
-    opacity: 0.8;
+.hr-1 {
+	height: 2px;
+	margin: 30px 0 20px 0;
+	background: rgba(255, 255, 255, 0.2);
+}
+.foot-lnk {
+	text-align: center;
 }
 
-.form {
-    height: 50%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.forgot-password {
+	color: #dc901b;
+	text-decoration: none;
 }
 
-.input-login,
-.btn-login {
-    background: linear-gradient( to right bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.3));
-    border: none;
-    margin: 2% auto;
-    padding: 0.5rem;
-    text-align: center;
-    border-radius: 2rem !important;
-    padding: 7px 18px;
+.forgot-password:hover {
+	color: #137586;
+	text-decoration: underline;
+	text-transform: uppercase;
 }
 
-.input-login::placeholder {
-    color: #426696;
+#already-member {
+	color: #dc901b;
 }
 
-.input-login {
-    height: 2rem;
-    width: 80%;
-    margin: 1rem 0px !important;
+.logo-blomia {
+	z-index: 1;
+	width: 100%;
+	display: flex;
+	position: relative;
+	/* margin-top: 50px; */
 }
 
-.botonesForm {
-    height: 30%;
-    width: 90%;
-    margin-top: 1rem;
-    display: flex;
-    justify-content: space-evenly;
+.logo-blomia #logo {
+	z-index: 1;
+	width: 40%;
+	position: relative;
+	margin: 0 auto !important;
 }
 
-.warning {
-    width: 60%;
-    margin: 1% auto;
-    text-align: center;
-    color: rgb(180, 0, 0);
+.logo-blomia-registro {
+	z-index: 1;
+	width: 100%;
+	display: flex;
+	position: relative;
+	margin-top: 20px;
 }
 
-.input-login:focus {
-    outline: none;
-    box-shadow: inset 2px 2px 4px rgba(0, 0, 0, 0.404);
-}
-
-.enlace {
-    border: 0px;
-    background: rgba(255, 255, 255, 0);
-    text-decoration: none;
-    color: black;
-}
-
-.circle1,
-.circle2 {
-    background: white;
-    background: linear-gradient( to right bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.3));
-    height: 15rem;
-    width: 15rem;
-    position: absolute;
-    border-radius: 50%;
-}
-
-.circle1 {
-    top: 13%;
-    right: 20%;
-}
-
-.circle2 {
-    bottom: 15%;
-    left: 20%;
+.logo-blomia-registro #logo-registro {
+	z-index: 1;
+	position: relative;
+	margin: 0 auto !important;
+	width: 40%;
 }
