--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -30,7 +30,7 @@ a {
 	margin: 0 auto;
 	/* margin-top: 20px; */
 	max-width: 525px;
-	/* min-height: 600px; */
+	min-height: 600px;
 
 	height: 100vh;
 
